spacing issue

--- a/client/styles/theme.less
+++ b/client/styles/theme.less
@@ -544,6 +544,7 @@ select.class-subject {
   border-radius: 10px;
   cursor: pointer;
   display: block;
+  margin-bottom: 24px;
 }
 
 #class-list .wrap.Physics:hover {
